--- a/app/home/chat-window/chat-window.scss
+++ b/app/home/chat-window/chat-window.scss
@@ -1,14 +1,30 @@
 chat-window {
 	& {
 		background-color: #eceff1;
-		float: right;
 		width: 400px;
-		padding: 10px;
+		padding: 10px 0 10px 10px;
+		position: absolute;
+		bottom: 0;
+		right: 0;
+		height: 600px;
+	}
+	.chat-window-container {
+		position: absolute;
+		width: 400px;
+		bottom: 10px;
+		height: 600px;
+	}
+	.chat-messages-container {
+		position: relative;
+		height: auto;
+		overflow-y: scroll;
+		height: calc(100% - 60px);
 	}
 	md-input-container {
 		& {
 			display: block;
 			width: 100%;
+			margin-top: 10px;
 			padding-bottom: 5px;
 		}
 		input {
