--- a/app/home/home.scss
+++ b/app/home/home.scss
@@ -1,6 +1,6 @@
 .court-container {
 	width: 50%;
-	margin: 10px auto;
+	margin: 10px 0;
 }
 
 .toolbar-user {
@@ -20,4 +20,25 @@
 	width: 40px;
 	height: 40px;
 	background-size: cover;
+}
+body {
+	overflow-x: hidden;
+}
+::-webkit-scrollbar{
+	width: 10px;
+}
+
+::-webkit-scrollbar-track-piece{
+	background-color: #FFF;
+}
+
+::-webkit-scrollbar-thumb{
+	background-color: #CBCBCB;
+	outline: 2px solid #FFF;
+	outline-offset: -2px;
+	border: .1px solid #B7B7B7;
+}
+
+::-webkit-scrollbar-thumb:hover{
+	background-color: #909090;
 }
